--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "KiMO ᴍᴜsɪᴄ",
     "description": "A Telegram Music Player Bot, written in Python with Pyrogram and Py-Tgcalls.",
-    "logo": "https://telegra.ph/file/56d1760224589ee370186.jpg",
+    "logo": "https://graph.org/file/5e170ba36d2ce795bc1d2.jpg",
     "keywords": [
     "python3",
     "telegram",
